Fixed icon vertical misalignment - closes #6

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,4 +1,5 @@
 $banner-height: 92px;
+$highlight-color: #ffa500;
 
 button {
     background-color: cadetblue;
